--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,19 @@
 use flake
+
+#auto-setup project
+LOCAL_PATH=$(cd $(dirname ${BASH_SOURCE[0]}); pwd -P)/
+export NIX_SHELL_DIR=$LOCAL_PATH/.nix-shell
+test -d $NIX_SHELL_DIR && mkdir -p $NIX_SHELL_DIR
+export MIX_HOME="$NIX_SHELL_DIR/.mix"
+export MIX_ARCHIVES="$MIX_HOME/archives"
+export HEX_HOME="$NIX_SHELL_DIR/.hex"
+export PATH="$MIX_HOME/escripts/:$PATH"
+
+if ! test -d $MIX_HOME; then
+  # Install Hex
+  yes | mix local.hex
+  yes | mix local.rebar
+fi
+
+echo "** To install livebook locally, run once: mix escript.install hex livebook **"
+echo "** and to start: livebook server"
